--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
   "name": "which-db-we-using-this-week",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "test": "node test"
   },
-  "author": "",
+  "bin": "./index.js",
+  "author": "syzer",
   "license": "ISC",
+  "keywords": [
+    "game",
+    "startup",
+    "text based",
+    "terminal",
+    "cli",
+    "ascii"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/syzer/which-db-we-using-this-week.git"
+  },
+  "bugs": {
+    "url": "https://github.com/syzer/which-db-we-using-this-week/issues"
+  },
   "dependencies": {
-    "img2ascii": "^1.2.4",
+    "img2ascii": "^1.3.0",
     "lodash": "^4.6.1"
   }
 }
