--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "dependencies": {
     "img2ascii": "^1.3.0",
     "lodash": "^4.6.1"
+  },
+  "devDependencies": {
+    "tap": "^5.7.0"
   }
 }
